# ANC-SDK-Sample-Apps

./: README.md  example-set-variables.bat  example-set-variables.sh
cmake/: CMakeLists.txt  krisp.cmake
src/sample-dll/: dll-main.cpp  dll-test.cpp
src/sample-nc/: main.cpp
vsbuild/: CMakeCache.txt
